--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://cipiripi13.github.io/Pokemon-App",
+  "homepage": "/Pokemon-App",
   "name": "pokemon-app",
   "version": "0.1.0",
   "private": true,
